--- a/templates/presenter/index.html.twig
+++ b/templates/presenter/index.html.twig
@@ -64,7 +64,7 @@
     <section id="subject-carousel" class="subject carousel slide row">
         <div class="col-3">
                 <!-- Left controls -->
-                <a class="carousel-control-prev" href="#subject-carousel">
+                <a class="carousel-control-prev d-none" href="#subject-carousel">
                     <i class="fas fa-chevron-left text-secondary"></i>
                 </a>
             </div>
@@ -81,7 +81,7 @@
             </div>
         <div class="col-3">
                 <!-- Right controls -->
-                <a class="carousel-control-next" href="#subject-carousel">
+                <a class="carousel-control-next d-none" href="#subject-carousel">
                     <i class="fas fa-chevron-right text-secondary"></i>
                 </a>
             </div>
