--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,8 +8,13 @@ h3 {
 h5 {
     font-weight: 400;
     font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.25em;
 }
 h6 {
     font-weight: 300;
     font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1em;
+}
+@media (min-width: 100px) {
+    body { font-size: 2.2em; }
 }
