--- a/assets/css/page2.css
+++ b/assets/css/page2.css
@@ -37,7 +37,7 @@
 }
 .content .title {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.75rem;
+    font-size: 1.75em;
     border: 0;
     height: 10%;
     outline: 0;
@@ -54,6 +54,7 @@
     letter-spacing: 3px;
     word-spacing: 10px;
     font-weight: 600;
+    font-size: 1em;
 }
 .content .actions {
     height: 15%;
@@ -65,6 +66,7 @@
 .content .details {
     height: 55%;
     padding: 20px 0 24px;
+    font-size: 1em;
 }
 .content .action-item {
     display: block;
@@ -73,6 +75,7 @@
 }
 .content .action-item span {
     margin-left: 5px;
+    font-size: 2.2em;
 }
 .content .details-photo {
     background-size: contain;
@@ -91,4 +94,8 @@
     resize: none;
     font-weight: 600;
     letter-spacing: 1px;
+    font-size: 1em;
+}
+.footer button {
+    background-color: white;
 }
