--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,11 +14,11 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-sm-2 col-md-3 col-xl-4"></div>
-                <div class="col-12 col-sm-8 col-md-6 col-xl-4">
+                <div class="col-1 col-xl-4"></div>
+                <div class="col-10 col-xl-4">
                     {% block body %}{% endblock %}
                 </div>
-                <div class="col-sm-2 col-md-3 col-xl-4"></div>
+                <div class="col-1 col-xl-4"></div>
             </div>
         </div>
 
